pagina de normativa

--- a/html/normativa.html
+++ b/html/normativa.html
@@ -103,11 +103,62 @@
   <!-- Title End -->
 
 
-  <!-- Borrar este div, es solo temporal -->
-  <div style="height: 400px; background-color: lightblue;">
+  <!-- Content Start -->
+  <div class="content-container">
+    <div class="normative">
+      <h2>Normativa Técnica 2021</h2>
+      <p>A continuación, se mostrará una breve descripción de la normativa que deberá seguir para el curso 2021:</p>
+      <div class="normative-content">
+        <div class="normative-image">
+          <a href="/assets/Normativas/undefined_undefined_b50791876a8b2ae86bd27b97d8f06399.pdf" target="_blank"
+            rel="noopener noreferrer">
+            <img src="/assets/Normativas/undefined_undefined_b50791876a8b2ae86bd27b97d8f06399-1-1.jpg">
+          </a>
+        </div>
 
+        <div class="normative-text">
+          <h3>Aspectos a destacar</h3>
+          <p>Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto
+            de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de
+            ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de
+            ejemplo
+          </p>
+          <p> texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
+            texto
+            de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de
+            ejemplo</p>
+        </div>
+      </div>
+      <p></p>
+    </div>
+
+    <div class="normative">
+      <h2>Normativa Técnica 2021</h2>
+      <p>A continuación, se mostrará una breve descripción de la normativa que deberá seguir para el curso 2021:</p>
+      <div class="normative-content">
+        <div class="normative-image">
+          <a href="/assets/Normativas/Normativa2020.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="/assets/Normativas/Normativa2020-1-1.jpg">
+          </a>
+        </div>
+
+        <div class="normative-text">
+          <h3>Aspectos a destacar</h3>
+          <p>Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto
+            de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de
+            ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de
+            ejemplo
+          </p>
+          <p> texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
+            texto
+            de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de
+            ejemplo</p>
+        </div>
+      </div>
+      <p></p>
+    </div>
   </div>
-  <!-- Borrar este div, es solo temporal -->
+  <!-- Content End -->
 
 
   <!-- Footer Start -->
