--- a/html/actividades.html
+++ b/html/actividades.html
@@ -103,11 +103,22 @@
   <!-- Title End -->
 
 
-  <!-- Borrar este div, es solo temporal -->
-  <div style="height: 400px; background-color: lightblue;">
-
+  <!-- Content Start -->
+  <div class="content-container">
+    <div class="image-container">
+      <img src="/assets/original/gimt (3).jpeg">
+      <h3>Actividades de verano</h3>
+    </div>
+    <div class="image-container">
+      <img src="/assets/original/gimt (2).jpeg">
+      <h3>Federadas</h3>
+    </div>
+    <div class="image-container">
+      <img src="/assets/original/gimt (1).jpeg">
+      <h3>Escuela</h3>
+    </div>
   </div>
-  <!-- Borrar este div, es solo temporal -->
+  <!-- Content End -->
 
 
   <!-- Footer Start -->
