--- a/html/index.html
+++ b/html/index.html
@@ -153,7 +153,7 @@
           Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
         </p>
         <div class="callout-btn-section">
-          <a href="/html/contacto.html" target="blank" class="callout-btn1">Contacto</a>
+          <a href="/html/contacto.html" class="callout-btn1">Contacto</a>
           <a href="/html/matriculacion.html" class="callout-btn2">Inscríbete</a>
         </div>
       </div>
