Pagina de noticias

--- a/html/el_club.html
+++ b/html/el_club.html
@@ -147,12 +147,16 @@
   <!-- Sections Start -->
   <div class="sections-container">
     <div>
-      <img src="/assets/Más fotos/WhatsApp Image 2020-11-08 at 11.45.21 (1).jpeg">
-      <h2>Cuerpo técnico</h2>
+      <a href="/html/cuerpo_tecnico.html">
+        <img src="/assets/Más fotos/WhatsApp Image 2020-11-08 at 11.45.21 (1).jpeg">
+        <h2>Cuerpo técnico</h2>
+      </a>
     </div>
     <div>
-      <img src="/assets/original/gimt (2)2.jpeg">
-      <h2>Palmarés</h2>
+      <a href="/html/palmares.html">
+        <img src="/assets/original/gimt (2)2.jpeg">
+        <h2>Palmarés</h2>
+      </a>
     </div>
   </div>
   <!-- Sections End -->
