--- a/html/competiciones.html
+++ b/html/competiciones.html
@@ -106,16 +106,23 @@
   <!-- Content Start -->
   <div class="content-container">
     <div class="image-container">
-      <img src="/assets/original/gimt (3).jpeg">
-      <h3>Provincial</h3>
+      <a href="/html/provincial.html">
+        <img src="/assets/original/gimt (3).jpeg">
+        <h3>Provincial</h3>
+      </a>
     </div>
     <div class="image-container">
-      <img src="/assets/original/gimt (2).jpeg">
-      <h3>Autonómica</h3>
+      <a href="/html/autonomica.html">
+        <img src="/assets/original/gimt (2).jpeg">
+        <h3>Autonómica</h3>
+      </a>
     </div>
     <div class="image-container">
-      <img src="/assets/original/gimt (1).jpeg">
-      <h3>Nacional</h3>
+      <a href="/html/nacional.html">
+        <img src="/assets/original/gimt (1).jpeg">
+        <h3>Nacional</h3>
+      </a>
+
     </div>
   </div>
   <!-- Content End -->
