--- a/html/noticias.html
+++ b/html/noticias.html
@@ -103,11 +103,43 @@
   <!-- Title End -->
 
 
-  <!-- Borrar este div, es solo temporal -->
-  <div style="height: 400px; background-color: lightblue;">
-
+  <!-- News Start -->
+  <div class="container news-container">
+    <h1>Últimas Noticias</h1>
+    <div class="row news-row">
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="/assets/noticia.jpg" class="news-image" />
+        </div>
+        <div class="news-text">
+          <h5>10 octubre 2020</h5>
+          <h3>Entrevista con el diario D-cerca</h3>
+          <p>
+            Entrevistamos a Fabiana Pereyra, del Club Gimnasia Rítmica La Mojonera, quien nos cuenta cómo han vivido
+            el
+            confinamiento las gimnastas del club...
+          </p>
+          <a>Leer mas</a>
+        </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="/assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
+        </div>
+        <div class="news-text">
+          <h5>2 agosto 2020</h5>
+          <h3>Protocolo Covid</h3>
+          <p>
+            Nuestras instalaciones son amplias y nos permiten cumplir con todos los protocolos texto de ejemplo texto
+            de
+            ejemplo texto de ejemplo texto de e...
+          </p>
+          <a>Leer mas</a>
+        </div>
+      </div>
+    </div>
   </div>
-  <!-- Borrar este div, es solo temporal -->
+  <!-- News End -->
 
 
   <!-- Footer Start -->
