Pagina de galeria

--- a/html/galeria.html
+++ b/html/galeria.html
@@ -103,11 +103,35 @@
   <!-- Title End -->
 
 
-  <!-- Borrar este div, es solo temporal -->
-  <div style="height: 400px; background-color: lightblue;">
-
+  <div class="content-container">
+    <div class="img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.06.jpeg');">
+    </div>
+    <div class="img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.10\ \(1\).jpeg');">
+    </div>
+    <div class="img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.12.jpeg');">
+    </div>
+    <div class="img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.13\ \(1\).jpeg');">
+    </div>
+    <div class=" img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.17.jpeg');">
+    </div>
+    <div class="img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.20.jpeg');">
+    </div>
+    <div class="img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.23\ \(1\).jpeg');">
+    </div>
+    <div class="img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-11-08\ at\ 11.45.21.jpeg');">
+    </div>
+    <div class="img-container"
+      style="background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-11-08\ at\ 11.45.21\ \(1\).jpeg');">
+    </div>
   </div>
-  <!-- Borrar este div, es solo temporal -->
 
 
   <!-- Footer Start -->
