--- a/html/matriculacion.html
+++ b/html/matriculacion.html
@@ -103,11 +103,43 @@
   <!-- Title End -->
 
 
-  <!-- Borrar este div, es solo temporal -->
-  <div style="height: 400px; background-color: lightblue;">
+  <div class="content-container">
+    <h1>Matriculación 2020/21</h1>
+    <div class="form-container">
+      <form action="#" method="POST">
+        <label for="name">Nombre completo</label><br>
+        <input type="text" id="name" name="name"><br>
 
+        <label for="birthdate">Fecha de nacimiento</label><br>
+        <input type="date" name="birthdate" id="birthdate"><br>
+
+        <label for="">D.N.I</label><br>
+        <input type="text" id="" name=""><br>
+
+        <label for="">Nombre Padre / Madre Tutor/a legal</label><br>
+        <input type="text" id="" name=""><br>
+
+        <label for="">Telefono (Whatsapp)</label><br>
+        <input type="text" id="" name=""><br>
+
+        <label for="">Nivel de la gimnasta</label><br>
+        <input type="radio" id="" name="">Escuela<br>
+        <input type="radio" id="" name="">Federada<br>
+
+        <label for="">Alergias o enfermedades (indica cuál)</label><br>
+        <input type="text" id="" name=""><br>
+
+        <label for="">Consentimiento a subir fotos en las redes sociales</label><br>
+        <input type="radio" id="" name="">Si<br>
+        <input type="radio" id="" name="">No<br>
+        <label for="">Adjuntar justificante de pago</label><br>
+        <input type="file" id="" name=""><br>
+
+        <input type="submit" value="Enviar">
+
+      </form>
+    </div>
   </div>
-  <!-- Borrar este div, es solo temporal -->
 
 
   <!-- Footer Start -->
