Zona de administrador

--- a/html/index.html
+++ b/html/index.html
@@ -202,7 +202,7 @@
         </p>
       </div>
     </div>
-    <button onclick="goBack()" id="goback-btn">
+    <button id="goback-btn">
       <i class="fas fa-arrow-up"></i>
     </button>
   </div>
