--- a/html/actividades_verano.html
+++ b/html/actividades_verano.html
@@ -112,12 +112,22 @@
     </div>
     <!-- Title End -->
 
+    <!-- Content End -->
     <div class="content-container">
       <h1>Actividades de verano de Gimnasia Rítmica La Mojonera</h1>
       <h2>Campus de verano</h2>
-      <p>Texto de Ejemplo</p>
+      <p>
+        El club de Gimnasia Rítmica de La Mojonera realiza un campus deportivo
+        de verano durante el mes de Agosto en el pabellón municipal de deportes
+        de esta localidad en horario de mañana. En este campus e realizan
+        diferentes actividades como clases de automaquillaje, zumba, baile
+        moderno, preparación física, técnica corporal, técnica de aparato y
+        ballet. Es apto para todos los niveles e incluso para tener un primer
+        contacto con este deporte. (Proximamente tendremos novedades de la
+        realización del campus de este año, estén atentos a nuestras redes
+        sociales)
+      </p>
       <img src="/assets/actividades_verano.jpeg" />
-      <p>Texto de Ejemplo</p>
     </div>
     <!-- Content End -->
 
@@ -126,10 +136,7 @@
       <div class="row">
         <div class="col-4 footer-col">
           <h1>Ven a visitarnos</h1>
-          <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo texto de ejemplo
-          </p>
+          <p>Concreta una cita y disfruta de nuestros entrenamientos</p>
           <p>
             <a>
               C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
@@ -140,8 +147,8 @@
         <div class="col-4 footer-col">
           <h1>Contacta con nosotros</h1>
           <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo
+            Infórmate sobres nuestros precios y horarios, siempre habrá alguien
+            encantado de atenderte
           </p>
           <p>
             Correo: <a>cdrlamojonera@gmail.com</a><br />
@@ -151,10 +158,7 @@
         </div>
         <div class="col-4 footer-col">
           <h1>Siguenos en redes sociales</h1>
-          <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo texto de ejemplo texto de ejemplo
-          </p>
+          <p>Entérate de todo al instante</p>
           <a
             href="https://www.facebook.com/ritmicalamojonera"
             class="fab fa-facebook-square"
@@ -177,7 +181,7 @@
           </p>
         </div>
       </div>
-      <button onclick="goBack()" id="goback-btn">
+      <button id="goback-btn">
         <i class="fas fa-arrow-up"></i>
       </button>
     </div>
