--- a/html/provincial.html
+++ b/html/provincial.html
@@ -117,8 +117,7 @@
       <h1>Programación de competiciones provinciales</h1>
       <p>
         En el siguiente apartado mostraremos un listado de las competiciones
-        provinciales en las que participará el club junto a su fecha de
-        realización.
+        provinciales en las que participará el club.
       </p>
       <h2>Conjuntos</h2>
       <p></p>
@@ -132,10 +131,7 @@
       <div class="row">
         <div class="col-4 footer-col">
           <h1>Ven a visitarnos</h1>
-          <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo texto de ejemplo
-          </p>
+          <p>Concreta una cita y disfruta de nuestros entrenamientos</p>
           <p>
             <a>
               C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
@@ -146,8 +142,8 @@
         <div class="col-4 footer-col">
           <h1>Contacta con nosotros</h1>
           <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo
+            Infórmate sobres nuestros precios y horarios, siempre habrá alguien
+            encantado de atenderte
           </p>
           <p>
             Correo: <a>cdrlamojonera@gmail.com</a><br />
@@ -157,10 +153,7 @@
         </div>
         <div class="col-4 footer-col">
           <h1>Siguenos en redes sociales</h1>
-          <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo texto de ejemplo texto de ejemplo
-          </p>
+          <p>Entérate de todo al instante</p>
           <a
             href="https://www.facebook.com/ritmicalamojonera"
             class="fab fa-facebook-square"
@@ -183,7 +176,7 @@
           </p>
         </div>
       </div>
-      <button onclick="goBack()" id="goback-btn">
+      <button id="goback-btn">
         <i class="fas fa-arrow-up"></i>
       </button>
     </div>
