--- a/html/cuerpo_tecnico.html
+++ b/html/cuerpo_tecnico.html
@@ -112,55 +112,53 @@
     </div>
     <!-- Title End -->
 
-    <!-- Borrar este div, es solo temporal -->
-    <div>
-      <div class="block">
-        <h1>Cuerpo técnico</h1>
+    <!-- Content Start -->
+    <div class="content-container">
+      <h1>Cuerpo técnico del Club Rítmica la Mojonera</h1>
+      <p>
+        Nuestros entrenadores forman gimnastas en dos niveles, escuela y club,
+        realizando una gran labor tanto técnica como organizativa. Muchos de
+        ellos tienen una larga experiencia con este deporte, tanto de
+        entrenadores como de gimnastas.
+      </p>
+      <br />
+      <div class="image-container">
+        <img src="/assets/Juanma.jpeg" />
+        <h3>Juan Manuel Fernández Romero</h3>
         <p>
-          Nuestros entrenadores forman gimnastas en dos niveles, escuela y club,
-          realizando una gran labor tanto técnica como organizativa. Muchos de
-          ellos tienen una larga experiencia con este deporte, tanto de
-          entrenadores como de gimnastas.
+          Juanma actualmente entrena a los grupos de escuela. Es entranador de
+          gimnasia rítmica nivel autonómico y profesor de ballet.
         </p>
       </div>
-      <div class="content-container">
-        <div class="image-container">
-          <img src="/assets/Juanma.jpeg" />
-          <h3>Juan Manuel Fernández Romero</h3>
-          <p>
-            Juanma actualmente entrena a los grupos de escuela. Es entranador de
-            gimnasia rítmica nivel autonómico y profesor de ballet.
-          </p>
-        </div>
-        <div class="image-container">
-          <img src="/assets/Juanma.jpeg" />
-          <h3>Sofía Nara Casado</h3>
-          <p>
-            Sofía es la coordinadora técnica del club y es entrenadora nacional
-            y juez de nivel 1. Lleva, actualmente, los grupos de gimnastas
-            federadas.
-          </p>
-        </div>
-        <div class="image-container">
-          <img src="/assets/Juanma.jpeg" />
-          <h3>María del Mar García Ulloa</h3>
-          <p>
-            María del Mar es entrenadora a nivel provincial y ha participado en
-            numerosos campeonatos de España nivel absoluto, ocupando, en varias
-            ocasiones, los puestos más altos.
-          </p>
-        </div>
-        <div class="image-container">
-          <img src="/assets/Juanma.jpeg" />
-          <h3>Anna Tortosa</h3>
-          <p>
-            Annie es entrenadora a nivel provincial y junto con Juanma lleva los
-            grupos de escuela.
-          </p>
-        </div>
+
+      <div class="image-container">
+        <img src="/assets/Juanma.jpeg" />
+        <h3>Sofía Nara Casado</h3>
+        <p>
+          Sofía es la coordinadora técnica del club y es entrenadora nacional y
+          juez de nivel 1. Lleva, actualmente, los grupos de gimnastas
+          federadas.
+        </p>
+      </div>
+      <div class="image-container">
+        <img src="/assets/Juanma.jpeg" />
+        <h3>María del Mar García Ulloa</h3>
+        <p>
+          María del Mar es entrenadora a nivel provincial y ha participado en
+          numerosos campeonatos de España nivel absoluto, ocupando, en varias
+          ocasiones, los puestos más altos.
+        </p>
+      </div>
+      <div class="image-container">
+        <img src="/assets/Juanma.jpeg" />
+        <h3>Anna Tortosa</h3>
+        <p>
+          Annie es entrenadora a nivel provincial y junto con Juanma lleva los
+          grupos de escuela.
+        </p>
       </div>
     </div>
-    <!-- Borrar este div, es solo temporal -->
+    <!-- Content End -->
 
     <!-- Footer Start -->
     <div class="container footer">
