--- a/html/cuerpo_tecnico.html
+++ b/html/cuerpo_tecnico.html
@@ -123,7 +123,10 @@
       </p>
       <br />
       <div class="image-container">
-        <img src="/assets/Juanma.jpeg" />
+        <img
+          src="/assets/Juanma.jpeg"
+          alt="Entrenador Juan Manuel Férnandez Romero"
+        />
         <h3>Juan Manuel Fernández Romero</h3>
         <p>
           Juanma actualmente entrena a los grupos de escuela. Es entranador de
@@ -132,7 +135,7 @@
       </div>
 
       <div class="image-container">
-        <img src="/assets/Juanma.jpeg" />
+        <img src="/assets/Juanma.jpeg" alt="Entrenador Sofía Nara Casado" />
         <h3>Sofía Nara Casado</h3>
         <p>
           Sofía es la coordinadora técnica del club y es entrenadora nacional y
@@ -141,7 +144,10 @@
         </p>
       </div>
       <div class="image-container">
-        <img src="/assets/Juanma.jpeg" />
+        <img
+          src="/assets/Juanma.jpeg"
+          alt="Entrenador María del Mar García Ulloa"
+        />
         <h3>María del Mar García Ulloa</h3>
         <p>
           María del Mar es entrenadora a nivel provincial y ha participado en
@@ -150,7 +156,7 @@
         </p>
       </div>
       <div class="image-container">
-        <img src="/assets/Juanma.jpeg" />
+        <img src="/assets/Juanma.jpeg" alt="Entrenador Anna Tortosa" />
         <h3>Anna Tortosa</h3>
         <p>
           Annie es entrenadora a nivel provincial y junto con Juanma lleva los
