--- a/html/actividades_verano.html
+++ b/html/actividades_verano.html
@@ -112,7 +112,7 @@
     </div>
     <!-- Title End -->
 
-    <!-- Content End -->
+    <!-- Content Start -->
     <div class="content-container">
       <h1>Actividades de verano de Gimnasia Rítmica La Mojonera</h1>
       <h2>Campus de verano</h2>
@@ -125,10 +125,13 @@
         ballet. Es apto para todos los niveles e incluso para tener un primer
         contacto con este deporte. (Proximamente tendremos novedades de la
         realización del campus de este año, estén atentos a nuestras redes
-        sociales)
+        sociales).
       </p>
       <img src="/assets/actividades_verano.jpeg" />
     </div>
+    <br />
+    <hr />
+
     <!-- Content End -->
 
     <!-- Footer Start -->
