--- a/html/escuela.html
+++ b/html/escuela.html
@@ -112,15 +112,18 @@
     </div>
     <!-- Title End -->
 
-    <!-- Content End -->
+    <!-- Content Start -->
     <div class="content-container">
       <h1>Escuela de Gimnasia Rítmica La Mojonera</h1>
       <p>
         Los grupos de escuela se dividen en función de las edades de las
-        gimnastas, teniendo cada grupo un horario y un día programado
+        gimnastas, teniendo cada grupo un horario y un día programado.
       </p>
       <img src="/assets/Escuela.jpeg" />
     </div>
+    <br />
+    <hr />
+
     <!-- Content End -->
 
     <!-- Footer Start -->
