--- a/html/federadas.html
+++ b/html/federadas.html
@@ -112,7 +112,7 @@
     </div>
     <!-- Title End -->
 
-    <!-- Content End -->
+    <!-- Content Start -->
     <div class="content-container">
       <h1>Grupo de Federadas de Gimnasia Rítmica La Mojonera</h1>
       <p>
@@ -121,6 +121,9 @@
       </p>
       <img src="/assets/federadas.jpeg" />
     </div>
+    <br />
+    <hr />
+
     <!-- Content End -->
 
     <!-- Footer Start -->
