--- a/html/noticias.html
+++ b/html/noticias.html
@@ -126,7 +126,7 @@
               Mojonera, quien nos cuenta cómo han vivido el confinamiento las
               gimnastas del club...
             </p>
-            <a>Leer mas</a>
+            <a>Leer más</a>
           </div>
         </div>
         <div class="col-6 news-col">
@@ -144,7 +144,7 @@
               todos los protocolos texto de ejemplo texto de ejemplo texto de
               ejemplo texto de e...
             </p>
-            <a>Leer mas</a>
+            <a>Leer más</a>
           </div>
         </div>
       </div>
