--- a/html/administrar_usuarios.html
+++ b/html/administrar_usuarios.html
@@ -1,127 +1,238 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Administrar usuarios</title>
 
-    <!-- FontAwesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Administrar usuarios</title>
 
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/administrador.css" />
-    <link rel="stylesheet" href="/css/administrar_usuarios.css" />
-  </head>
+  <!-- FontAwesome CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
-  <body>
-    <!-- Header Start -->
-    <div class="administrator-header">
-      <img src="/assets/logo_ritmica2.png" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/administrador.css" />
+  <link rel="stylesheet" href="/css/administrar_usuarios.css" />
+</head>
+
+<body>
+  <!-- Header Start -->
+  <div class="administrator-header">
+    <img src="/assets/logo_ritmica2.png" />
+  </div>
+  <!-- Header End -->
+
+  <!-- Title Start -->
+  <div class="container">
+    <div class="row title-row">
+      <div class="col title-empty-col"></div>
+      <div class="col-5 title-col">
+        <div class="title-main">
+          <span>Usuarios</span>
+        </div>
+      </div>
+
+      <div class="col-5 title-col">
+        <div class="title-path">
+          <span>Usuarios</span>
+          <span>/</span>
+          <span>Administrar usuarios</span>
+        </div>
+      </div>
+      <div class="col title-empty-col"></div>
     </div>
-    <!-- Header End -->
+  </div>
+  <!-- Title End -->
 
-    <!-- Title Start -->
-    <div class="container">
-      <div class="row title-row">
-        <div class="col title-empty-col"></div>
-        <div class="col-5 title-col">
-          <div class="title-main">
-            <span>Usuarios</span>
-          </div>
-        </div>
-
-        <div class="col-5 title-col">
-          <div class="title-path">
-            <span>Usuarios</span>
-            <span>/</span>
-            <span>Administrar usuarios</span>
-          </div>
-        </div>
-        <div class="col title-empty-col"></div>
-      </div>
+  <!-- Side Menu Start -->
+  <button class="open-btn">
+    <i class="fas fa-chevron-right"></i>
+  </button>
+  <div class="side-menu">
+    <a href="javascript:void(0)" class="close-btn">&times;</a>
+    <div class="menu-section">
+      <a href="javascript:void(0)" class="menu-title">Usuarios</a>
+      <a href="/html/registrar_usuarios.html" class="menu-text">Registrar usuarios</a>
+      <a href="/html/administrar_usuarios.html" class="menu-text">Administrar usuarios</a>
     </div>
-    <!-- Title End -->
 
-    <!-- Side Menu Start -->
-    <button class="open-btn">
-      <i class="fas fa-chevron-right"></i>
-    </button>
-    <div class="side-menu">
-      <a href="javascript:void(0)" class="close-btn">&times;</a>
-      <div class="menu-section">
-        <a href="javascript:void(0)" class="menu-title">Usuarios</a>
-        <a href="/html/registrar_usuarios.html" class="menu-text"
-          >Registrar usuarios</a
-        >
-        <a href="/html/administrar_usuarios.html" class="menu-text"
-          >Administrar usuarios</a
-        >
-      </div>
-
-      <div class="menu-section">
-        <a href="javascript:void(0)" class="menu-title">Noticias</a>
-        <a href="/html/modificar_eliminar_noticias.html" class="menu-text"
-          >Modificar y eliminar noticias</a
-        >
-        <a href="/html/anadir_noticias.html" class="menu-text"
-          >Añadir noticias</a
-        >
-      </div>
-      <div class="menu-section">
-        <a href="javascript:void(0)" class="menu-title">Horarios</a>
-        <a href="/html/actualizar_modificar_horarios.html" class="menu-text"
-          >Actualizar y modificar horarios</a
-        >
-      </div>
-      <div class="menu-section">
-        <a href="javascript:void(0)" class="menu-title">Club</a>
-        <a href="anadir_trofeos.html" class="menu-text"
-          >Añadir trofeos/logros del club</a
-        >
-        <a href="modificar_incluir_imagenes.html" class="menu-text"
-          >Modificar e incluir imágenes</a
-        >
-      </div>
-      <hr />
-      <div class="menu-section">
-        <a href="administrar_inscripciones.html" class="menu-text"
-          >Administrar inscripciones</a
-        >
-      </div>
+    <div class="menu-section">
+      <a href="javascript:void(0)" class="menu-title">Noticias</a>
+      <a href="/html/modificar_eliminar_noticias.html" class="menu-text">Modificar y eliminar noticias</a>
+      <a href="/html/anadir_noticias.html" class="menu-text">Añadir noticias</a>
     </div>
-    <!-- Side Menu End -->
+    <div class="menu-section">
+      <a href="javascript:void(0)" class="menu-title">Horarios</a>
+      <a href="/html/actualizar_modificar_horarios.html" class="menu-text">Actualizar y modificar horarios</a>
+    </div>
+    <div class="menu-section">
+      <a href="javascript:void(0)" class="menu-title">Club</a>
+      <a href="anadir_trofeos.html" class="menu-text">Añadir trofeos/logros del club</a>
+      <a href="modificar_incluir_imagenes.html" class="menu-text">Modificar e incluir imágenes</a>
+    </div>
+    <hr />
+    <div class="menu-section">
+      <a href="administrar_inscripciones.html" class="menu-text">Administrar inscripciones</a>
+    </div>
+  </div>
+  <!-- Side Menu End -->
 
-    <!-- Content Start -->
-    <div class="content-container">
-      <h1>Entrenadores</h1>
-      <div class="col-11 trainer">
-        <div class="col-5">
-          <img class="fotoper" src="/assets/Juanma.jpeg" />
-          <p class="name"><b>Nombre completo</b></p>
+  <!-- Content Start -->
+  <div class="content-container">
+    <h1>Entrenadores</h1>
+    <div class="trainer-container">
+      <div class="trainer">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
         </div>
-        <div class="col-5 info">
-          <p>Correo:</p>
-          <p>Telefono:</p>
+        <div class="name-container">
+          <p>Nombre completo</p>
         </div>
-        <div class="col-2 mas">
-          <a>Ver más</a>
-        </div>
-        <div class="edit-container">
-          <i class="fas fa-trash-alt edit"></i>
-          <i class="fas fa-pencil-alt edit"></i>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
         </div>
       </div>
-      <h1>Gimnastas</h1>
-      <div class="gim"></div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
     </div>
-    <!-- Content End -->
+    <div class="trainer-container">
+      <div class="trainer">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <p>Nombre completo</p>
+        </div>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
+    </div>
+    <div class="trainer-container">
+      <div class="trainer">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <p>Nombre completo</p>
+        </div>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
+    </div>
 
-    <!-- JQuery -->
-    <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <h1 class="gymnast-header">Gimnastas</h1>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <p>Nombre completo</p>
+        </div>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
+    </div>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <p>Nombre completo</p>
+        </div>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
+    </div>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <p>Nombre completo</p>
+        </div>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
+    </div>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <p>Nombre completo</p>
+        </div>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
+    </div>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <p>Nombre completo</p>
+        </div>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
+    </div>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <p>Nombre completo</p>
+        </div>
+        <div class="contact-container">
+          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
+          <p>Teléfono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/bin-icon.PNG" class="bin-img">
+      <img src="/assets/edit-icon.PNG" class="edit-img">
+    </div>
+  </div>
+  <!-- Content End -->
 
-    <script src="/js/main.js"></script>
-  </body>
+
+  <!-- JQuery -->
+  <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
