actualizado administrar usuarios

--- a/html/administrar_usuarios.html
+++ b/html/administrar_usuarios.html
@@ -85,15 +85,21 @@
           <img src="/assets/Juanma - profile.jpeg">
         </div>
         <div class="name-container">
-          <p>Nombre completo</p>
+          <h2>Nombre completo</h2>
+          <p class="hidden-content hidden">Entrena: Grupo A</p>
+          <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
           <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
           <p>Teléfono: 666 66 66 66</p>
+          <p class="hidden-content hidden">Teléfono secundario: 777 77 77 77</p>
+          <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
+      <a href="editar_usuario.html">
+        <img src="/assets/edit-icon.PNG" class="edit-img">
+      </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
     </div>
     <div class="trainer-container">
       <div class="trainer">
@@ -101,15 +107,21 @@
           <img src="/assets/Juanma - profile.jpeg">
         </div>
         <div class="name-container">
-          <p>Nombre completo</p>
+          <h2>Nombre completo</h2>
+          <p class="hidden-content hidden">Entrena: Grupo A</p>
+          <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
           <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
           <p>Teléfono: 666 66 66 66</p>
+          <p class="hidden-content hidden">Teléfono secundario: 777 77 77 77</p>
+          <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
+      <a href="editar_usuario.html">
+        <img src="/assets/edit-icon.PNG" class="edit-img">
+      </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
     </div>
     <div class="trainer-container">
       <div class="trainer">
@@ -117,15 +129,21 @@
           <img src="/assets/Juanma - profile.jpeg">
         </div>
         <div class="name-container">
-          <p>Nombre completo</p>
+          <h2>Nombre completo</h2>
+          <p class="hidden-content hidden">Entrena: Grupo A</p>
+          <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
           <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
           <p>Teléfono: 666 66 66 66</p>
+          <p class="hidden-content hidden">Teléfono secundario: 777 77 77 77</p>
+          <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
+      <a href="editar_usuario.html">
+        <img src="/assets/edit-icon.PNG" class="edit-img">
+      </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
     </div>
 
     <h1 class="gymnast-header">Gimnastas</h1>
@@ -135,15 +153,20 @@
           <img src="/assets/Juanma - profile.jpeg">
         </div>
         <div class="name-container">
-          <p>Nombre completo</p>
+          <h2>Nombre completo</h2>
+          <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
           <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
           <p>Teléfono: 666 66 66 66</p>
+          <p class="hidden-content hidden">Teléfono secundario: 777 77 77 77</p>
+          <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
+      <a href="editar_usuario.html">
+        <img src="/assets/edit-icon.PNG" class="edit-img">
+      </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
     </div>
     <div class="gymnast-container">
       <div class="gymnast">
@@ -151,15 +174,20 @@
           <img src="/assets/Juanma - profile.jpeg">
         </div>
         <div class="name-container">
-          <p>Nombre completo</p>
+          <h2>Nombre completo</h2>
+          <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
           <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
           <p>Teléfono: 666 66 66 66</p>
+          <p class="hidden-content hidden">Teléfono secundario: 777 77 77 77</p>
+          <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
+      <a href="editar_usuario.html">
+        <img src="/assets/edit-icon.PNG" class="edit-img">
+      </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
     </div>
     <div class="gymnast-container">
       <div class="gymnast">
@@ -167,15 +195,20 @@
           <img src="/assets/Juanma - profile.jpeg">
         </div>
         <div class="name-container">
-          <p>Nombre completo</p>
+          <h2>Nombre completo</h2>
+          <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
           <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
           <p>Teléfono: 666 66 66 66</p>
+          <p class="hidden-content hidden">Teléfono secundario: 777 77 77 77</p>
+          <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
+      <a href="editar_usuario.html">
+        <img src="/assets/edit-icon.PNG" class="edit-img">
+      </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
     </div>
     <div class="gymnast-container">
       <div class="gymnast">
@@ -183,47 +216,20 @@
           <img src="/assets/Juanma - profile.jpeg">
         </div>
         <div class="name-container">
-          <p>Nombre completo</p>
+          <h2>Nombre completo</h2>
+          <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
           <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
           <p>Teléfono: 666 66 66 66</p>
+          <p class="hidden-content hidden">Teléfono secundario: 777 77 77 77</p>
+          <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
+      <a href="editar_usuario.html">
+        <img src="/assets/edit-icon.PNG" class="edit-img">
+      </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
-    </div>
-    <div class="gymnast-container">
-      <div class="gymnast">
-        <div class="img-container">
-          <img src="/assets/Juanma - profile.jpeg">
-        </div>
-        <div class="name-container">
-          <p>Nombre completo</p>
-        </div>
-        <div class="contact-container">
-          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
-          <p>Teléfono: 666 66 66 66</p>
-        </div>
-      </div>
-      <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
-    </div>
-    <div class="gymnast-container">
-      <div class="gymnast">
-        <div class="img-container">
-          <img src="/assets/Juanma - profile.jpeg">
-        </div>
-        <div class="name-container">
-          <p>Nombre completo</p>
-        </div>
-        <div class="contact-container">
-          <p>Correo eléctronico: ejemploejemploejemploejemploejemplo@gmail.com</p>
-          <p>Teléfono: 666 66 66 66</p>
-        </div>
-      </div>
-      <img src="/assets/bin-icon.PNG" class="bin-img">
-      <img src="/assets/edit-icon.PNG" class="edit-img">
     </div>
   </div>
   <!-- Content End -->
