--- a/html/matriculacion.html
+++ b/html/matriculacion.html
@@ -99,6 +99,7 @@
   </div>
   <!-- Title End -->
 
+  <!-- Content Start -->
   <div class="main">
     <div class="content-container">
       <h1>Matriculación 2020/21</h1>
@@ -125,7 +126,7 @@
           </div>
 
           <div class="form-field">
-            <label for="whatsapp" class="field-title">Telefono (Whatsapp)</label><br />
+            <label for="whatsapp" class="field-title">Teléfono (Whatsapp)</label><br />
             <input type="text" id="whatsapp" name="whatsapp" autocomplete="off" /><br />
           </div>
 
@@ -160,7 +161,7 @@
       </form>
     </div>
   </div>
-  </div>
+  <!-- Content End -->
 
   <!-- Footer Start -->
   <div class="container footer">
