cuerpo tecnico acabado

--- a/html/cuerpo_tecnico.html
+++ b/html/cuerpo_tecnico.html
@@ -135,7 +135,7 @@
       </div>
 
       <div class="image-container">
-        <img src="/assets/Juanma.jpeg" alt="Entrenador Sofía Nara Casado" />
+        <img src="/assets/sofi.png" alt="Entrenador Sofía Nara Casado" />
         <h3>Sofía Nara Casado</h3>
         <p>
           Sofía es la coordinadora técnica del club y es entrenadora nacional y
@@ -145,7 +145,7 @@
       </div>
       <div class="image-container">
         <img
-          src="/assets/Juanma.jpeg"
+          src="/assets/mariMar.jpeg"
           alt="Entrenador María del Mar García Ulloa"
         />
         <h3>María del Mar García Ulloa</h3>
@@ -156,7 +156,7 @@
         </p>
       </div>
       <div class="image-container">
-        <img src="/assets/Juanma.jpeg" alt="Entrenador Anna Tortosa" />
+        <img src="/assets/annie.jpeg" alt="Entrenador Anna Tortosa" />
         <h3>Anna Tortosa</h3>
         <p>
           Annie es entrenadora a nivel provincial y junto con Juanma lleva los
